# cpp-http-server

./: .gitignore  CMakeLists.txt  Launch-VsDevShell.ps1  LinuxServer.cpp  Makefile  README.md  Server.cpp  Server.h  WindowsClient.cpp  WindowsClient.ilk  WindowsClientExample.cpp  WindowsServer-Dell-From-Hell.ilk  WindowsServer.cpp  WindowsServer.ilk  WindowsServer.md  WindowsServerExample.cpp  docs.md  helloworld.cpp  helloworld.ilk  main  main.cpp  notes.md  paste  paste.cpp  prompt.md  running-client-server-examples.md  test.cpp
docs/: http-request-structure.md  running-client-server-examples.md  the-plan.md  windows-server.md
include/: HTTPRequest.h  HTTPResponse.h  Networking.h  Server.h  Utils.h
scripts/: directory.ps1
src/pages/: about.html  contact.html  index.html  projects.html
src/windows/: HTTPRequest.cpp  HTTPResponse.cpp  Networking.cpp  Server.cpp  Utils.cpp  WindowsServer.cpp
windows/: WindowsClient.cpp  WindowsServer.cpp
